--- a/roles/docker-up/templates/daemon.json.j2
+++ b/roles/docker-up/templates/daemon.json.j2
@@ -3,7 +3,7 @@
   "log-opts": {
     "max-size": "100m"
   },
-{% if docker_registry_mirror_url != '' %}
+{% if docker_registry_mirror_url != None %}
   "registry-mirrors": [
     "{{ docker_registry_mirror_url }}"
   ],
