--- a/roles/k3s-agent-up/templates/config.yaml.j2
+++ b/roles/k3s-agent-up/templates/config.yaml.j2
@@ -2,3 +2,4 @@
 {% if k3s_node_ip %}
 node-ip: {{ k3s_node_ip }}
 {% endif %}
+server: https://{{ hostvars[groups.k3s_server[0]].k3s_node_ip | default(hostvars[groups.k3s_server[0]].ansible_default_ipv4.address) }}:6443
