Replace `container_registry_mirror_url` with `k3s_container_registry_mirror_urls` and make it a dictionary.

--- a/roles/k3s-node-up/templates/registries.yaml.j2
+++ b/roles/k3s-node-up/templates/registries.yaml.j2
@@ -1,4 +1,6 @@
 mirrors:
-  docker.io:
+{% for registry, url in k3s_container_registry_mirror_urls %}
+  {{ registry }}:
     endpoint:
-      - "{{ container_registry_mirror_url }}"
+      - "{{ url }}"
+{% endfor %}
