Fix writing of `registries.yaml`.

--- a/roles/k3s-node-up/templates/registries.yaml.j2
+++ b/roles/k3s-node-up/templates/registries.yaml.j2
@@ -1,5 +1,5 @@
 mirrors:
-{% for registry, url in k3s_container_registry_mirror_urls %}
+{% for registry, url in k3s_container_registry_mirror_urls.items() %}
   {{ registry }}:
     endpoint:
       - "{{ url }}"
