--- a/roles/k3s-server-up/templates/config.yaml.j2
+++ b/roles/k3s-server-up/templates/config.yaml.j2
@@ -12,7 +12,7 @@ flannel-backend: {{ k3s_flannel_backend }}
 node-ip: {{ k3s_node_ip }}
 {% endif %}
 {% if not k3s_server_schedule_pods %}
-node-taint: node-role.kubernetes.io/master:NoSchedule
+node-taint: node-role.kubernetes.io/control-plane:NoSchedule
 {% endif %}
 {% if inventory_hostname != groups.k3s_server[0] %}
 server: https://{{ hostvars[groups.k3s_server[0]].k3s_node_ip | default(hostvars[groups.k3s_server[0]].ansible_default_ipv4.address) }}:6443
