--- a/roles/k3s-agent-up/templates/config.yaml.j2
+++ b/roles/k3s-agent-up/templates/config.yaml.j2
@@ -8,10 +8,16 @@ node-external-ip: {{ k3s_node_external_ip }}
 {% if k3s_node_ip %}
 node-ip: {{ k3s_node_ip }}
 {% endif %}
+{% if k3s_labels | length > 0 %}
+node-label:
 {% for label in k3s_labels %}
-node-label: {{ label }}
+  - {{ label }}
 {% endfor %}
+{% endif %}
 server: https://{{ hostvars[groups.k3s_server[0]].k3s_node_ip | default(hostvars[groups.k3s_server[0]].ansible_default_ipv4.address) }}:6443
+{% if k3s_taints | length > 0 %}
+node-taint:
 {% for taint in k3s_taints %}
-node-taint: {{ taint }}
+  - {{ taint }}
 {% endfor %}
+{% endif %}
