--- a/roles/k3s-server-up/templates/config.yaml.j2
+++ b/roles/k3s-server-up/templates/config.yaml.j2
@@ -23,16 +23,22 @@ node-label:
   - {{ label }}
 {% endfor %}
 {% endif %}
-{% if not k3s_server_schedule_pods %}
-node-taint: node-role.kubernetes.io/control-plane:NoSchedule
-node-taint: node-role.kubernetes.io/master:NoSchedule
-{% endif %}
-{% if k3s_taints | length > 0 %}
+{% if (k3s_taints | length > 0) or (not k3s_server_schedule_pods) %}
 node-taint:
 {% for taint in k3s_taints %}
   - {{ taint }}
 {% endfor %}
+{% if not k3s_server_schedule_pods %}
+  - node-role.kubernetes.io/control-plane:NoSchedule
+  - node-role.kubernetes.io/master:NoSchedule
+{% endif %}
 {% endif %}
 {% if inventory_hostname != groups.k3s_server[0] %}
-server: https://{{ hostvars[groups.k3s_server[0]].k3s_node_ip | default(hostvars[groups.k3s_server[0]].ansible_default_ipv4.address) }}:6443
+{% if hostvars[groups.k3s_server[0]].k3s_node_ip is defined %}
+server: https://{{ hostvars[groups.k3s_server[0]].k3s_node_ip }}:6443
+{% elif hostvars[groups.k3s_server[0]].k3s_flannel_iface is defined %}
+server: https://{{ hostvars[groups.k3s_server[0]].ansible_facts[hostvars[groups.k3s_server[0]].k3s_flannel_iface].ipv4.address }}:6443
+{% else %}
+server: https://{{ hostvars[groups.k3s_server[0]].ansible_default_ipv4.address }}:6443
+{% endif %}
 {% endif %}
